terraform/aws/ec2-with-ebs/security_group.tf
resource "aws_security_group" "allow_ssh" {
  name        = "Allow_ssh"
  description = "Allow SSH inbound traffic and all outbound traffic"

  vpc_id = aws_vpc.main.id

  ingress {
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "Allow_ssh"
  }
}
